// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusDot — glyph rendering > matches snapshot for \`bad\` 1`] = `
<span
  aria-hidden="true"
  class="relative inline-flex size-2 items-center justify-center"
>
  <span
    class="absolute inline-flex size-2 rounded-full bg-bad"
  />
  <svg
    aria-hidden="true"
    class="absolute size-2 text-bg-app"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 8 8"
  >
    <path
      d="M2 2 L6 6"
    />
    <path
      d="M6 2 L2 6"
    />
  </svg>
</span>
`;

exports[`StatusDot — glyph rendering > matches snapshot for \`ok\` 1`] = `
<span
  aria-hidden="true"
  class="relative inline-flex size-2 items-center justify-center"
>
  <span
    class="absolute inline-flex size-2 rounded-full bg-ok shimmer"
  />
  <svg
    aria-hidden="true"
    class="absolute size-2 text-bg-app"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 8 8"
  >
    <path
      d="M1.75 4.25 L3.25 5.75 L6.25 2.5"
    />
  </svg>
</span>
`;

exports[`StatusDot — glyph rendering > matches snapshot for \`pending\` 1`] = `
<span
  aria-hidden="true"
  class="relative inline-flex size-2 items-center justify-center"
>
  <span
    class="absolute inline-flex size-2 rounded-full bg-fg-muted"
  />
  <svg
    aria-hidden="true"
    class="absolute size-2 text-bg-app"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 8 8"
  >
    <path
      d="M2 4 L2 4"
    />
    <path
      d="M4 4 L4 4"
    />
    <path
      d="M6 4 L6 4"
    />
  </svg>
</span>
`;

exports[`StatusDot — glyph rendering > matches snapshot for \`warn\` 1`] = `
<span
  aria-hidden="true"
  class="relative inline-flex size-2 items-center justify-center"
>
  <span
    class="absolute inline-flex size-2 rounded-full bg-warn"
  />
  <svg
    aria-hidden="true"
    class="absolute size-2 text-bg-app"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.5"
    viewBox="0 0 8 8"
  >
    <path
      d="M4 1.75 L4 4.75"
    />
    <path
      d="M4 6.25 L4 6.5"
    />
  </svg>
</span>
`;
